--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 	</script>
 </head>
 
-<body>
-
-
+<body style="overflow-x: hidden;">
 	<header class="header">
 		<div class="header__cloud">
 			<img class="header__cloud_img" src="img/cloud.png" alt="">
