--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/main.min.css">
-	<link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<!-- <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
+
 <header class="header">
 	<div class="header__container">
-		<!-- <div class="header__cloud">
-			<img class="header__cloud_img" src="img/cloud.png" alt="">
-		</div> -->
 		<nav class="nav">
 			<div class="nav__logo">
 				<p>
@@ -78,7 +76,8 @@
 		</nav>
 		<div class="sectionhero">
 			<div class="sectionhero__img">
-				<img class="sectionhero__img_img" src="img/airplane.png" alt="">
+				<img class="sectionhero__img_img lazy" data-original="img/airplane.png" src="img/lazyload.gif" width="700px"
+					height="700px" alt="">
 			</div>
 			<div class="sectionhero__body">
 				<div class="sectionhero__desc">
@@ -296,13 +295,13 @@
 		<div class="section-3__body">
 			<div class="section-3__slider">
 				<div class="section-3__slider--item">
-					<img src="img/slide3.jpg" alt="">
+					<img class="lazy" data-original="img/slide3.jpg" src="img/lazyload.gif" alt="">
 				</div>
 				<div class="section-3__slider--item">
-					<img src="img/slide4.jpg" alt="">
+					<img class="lazy" data-original="img/slide4.jpg" src="img/lazyload.gif" alt="">
 				</div>
 				<div class="section-3__slider--item">
-					<img src="img/slide5.jpg" alt="">
+					<img class="lazy" data-original="img/slide5.jpg" src="img/lazyload.gif" alt="">
 				</div>
 
 			</div>
@@ -336,7 +335,7 @@
 	<div class="section-4">
 		<div class="section-4Left">
 			<div class="section-4Left__img">
-				<img src="img/1611581927-hyer-personal-flight-manager.png" alt="">
+				<img class="lazy" data-original="img/1611581927-hyer-personal-flight-manager.png" src="img/lazyload.gif" alt="">
 			</div>
 		</div>
 		<div class="section-4Right">
@@ -496,16 +495,16 @@
 	<div class="section-6 ">
 		<div class="section-6slider ">
 			<div class="section-6slider__item">
-				<img src="img/1629201451-luxury-business-jet-cabin.jpg" alt="">
+				<img class="lazy" data-original="img/1629201451-luxury-business-jet-cabin.jpg" src="img/lazyload.gif" alt="">
 			</div>
 			<div class="section-6slider__item">
-				<img src="img/1620758681-cabin.jpg" alt="">
+				<img class="lazy" data-original="img/1620758681-cabin.jpg" src="img/lazyload.gif" alt="">
 			</div>
 			<div class="section-6slider__item">
-				<img src="img/1620758503-inside-heavy-jet.jpg" alt="">
+				<img class="lazy" data-original="img/1620758503-inside-heavy-jet.jpg" src="img/lazyload.gif" alt="">
 			</div>
 			<div class="section-6slider__item">
-				<img src="img/1611911585-flyhyer.png" alt="">
+				<img class="lazy" data-original="img/1611911585-flyhyer.png" src="img/lazyload.gif" alt="">
 			</div>
 		</div>
 		<div class="section-6desc">
@@ -588,6 +587,10 @@
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 <script src="js/animationGsap.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
+<script>
+	$("img.lazy").lazyload();
+</script>
 </body>
 
 </html>
