--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 		</nav>
 		<div class="sectionhero">
 			<div class="sectionhero__img">
-				<!-- <img class="sectionhero__img_img lazy" data-original="img/airplane.png" src="img/lazyload.gif" width="700px"
-				height="700px" alt=""> -->
+				<img class="sectionhero__img_img lazy" data-original="img/airplane.png" src="img/lazyload.gif" width="700px"
+					height="700px" alt="">
 			</div>
 			<div class="sectionhero__body">
 				<div class="sectionhero__desc">
